# local-chatbot-with-streamlit

./: pyproject.toml  steps.txt
backend/config/: backend_config.py  models_config.yaml
backend/llm/: llm_factory.py
backend/services/: chat.py
